--- a/grpcs/Dockerfile
+++ b/grpcs/Dockerfile
@@ -1,6 +1,10 @@
 FROM golang:1.21.4-alpine
 
-RUN mkdir /app
-COPY . /app
 WORKDIR /app
-CMD [ "/usr/local/go/bin/go", "run", "." ]
+
+COPY go.mod go.sum ./
+RUN go mod download
+COPY . .
+RUN CGO_ENABLED=0 GOOS=linux go build -o /grpc_service
+
+CMD [ "/grpc_service" ]
