--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -1,7 +1,10 @@
 FROM golang:1.21.4-alpine
 
-RUN mkdir /app
-COPY . /app
 WORKDIR /app
-EXPOSE 8080
-CMD [ "/usr/local/go/bin/go", "run", "." ]
+
+COPY go.mod go.sum ./
+RUN go mod download
+COPY . .
+RUN CGO_ENABLED=0 GOOS=linux go build -C src -o /worker
+
+CMD [ "/worker" ]
