Some modifications for docker-compose and .env; Kibana added

--- a/.env
+++ b/.env
@@ -1,13 +1,4 @@
-# Worker and API env
-GRPC_SERVICE_HOST=grpc # Docker will help us with that
-GRPC_SERVICE_PORT=8081
-
-# Worker env
-DATA_LOCATION=data/data.json
-
-# gRPC Service env
-ELASTIC_SERVICE_HOST=elasticsearch
-ELASTIC_SERVICE_PORT=<ELASTIC_SERVICE_PORT>
-
-# API env
+WORKER_PKG=github.com/TimC0de/simpals-backend-test-task/worker
+GRPCS_PKG=github.com/TimC0de/simpals-backend-test-task/grpcs
 API_ACCESS_PORT=8080
+GRPC_SERVICE_ACCESS_PORT=8081
