--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,4 @@
-# Worker and API env
-GRPC_SERVICE_HOST=<GRPC_SERVICE_HOST>
-GRPC_SERVICE_PORT=<GRPC_SERVICE_PORT>
-
-# Worker env
-DATA_LOCATION=<DATA_LOCATION>
-
-# gRPC Service env
-ELASTIC_SERVICE_HOST=<ELASTIC_SERVICE_HOST>
-ELASTIC_SERVICE_PORT=<ELASTIC_SERVICE_PORT>
-
-# API env
+WORKER_PKG=<WORKER_PKG>
+GRPCS_PKG=<GRPCS_PKG>
 API_ACCESS_PORT=<API_ACCESS_PORT>
+GRPC_SERVICE_ACCESS_PORT=<GRPC_SERVICE_ACCESS_PORT>
