--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,45 @@
 version: '3.7'
 services:
   worker:
-    env_file:
-      - .env
     build:
       context: worker
+      args:
+        - PKG=${WORKER_PKG}
     volumes:
       - "./worker/:/app"
+    restart: on-failure
   grpcs:
-    env_file:
-        - .env
     build:
       context: grpcs
+      args:
+        - PKG=${GRPCS_PKG}
+        - GRPC_SERVICE_ACCESS_PORT=${GRPC_SERVICE_ACCESS_PORT}
     volumes:
       - "./grpcs/:/app"
-  api:
-    env_file:
-      - .env
-    build:
-      context: api
-      args:
-        - API_ACCESS_PORT=${API_ACCESS_PORT}
-    volumes:
-      - "./api/:/app"
+    restart: on-failure
     ports:
-      - "${API_ACCESS_PORT}:${API_ACCESS_PORT}"
+       - "${GRPC_SERVICE_ACCESS_PORT}:${GRPC_SERVICE_ACCESS_PORT}"
+  # api:
+  #   build:
+  #     context: api
+  #     args:
+  #       - API_ACCESS_PORT=${API_ACCESS_PORT}
+  #   volumes:
+  #     - "./api/:/app"
+  #   ports:
+  #     - "${API_ACCESS_PORT}:${API_ACCESS_PORT}"
   elasticsearch:
     image: elasticsearch:8.11.0
     environment:
-      - discovery.type=single-node
+      - 'ES_JAVA_OPTS=-Xms2g -Xmx2g'
+      - 'bootstrap.memory_lock=true'
+      - 'discovery.type=single-node'
+      - 'xpack.security.enabled=false'
+      - 'xpack.security.enrollment.enabled=false'
     ports:
       - "9200:9200"
       - "9300:9300"
-  
+  kibana:
+    image: kibana:8.11.1
+    ports:
+      - "5601:5601"
